--- a/ai-setup/index.html
+++ b/ai-setup/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +25,24 @@
     p {
       font-size: 1.2em;
       margin-bottom: 1.5em;
+      max-width: 600px;
+    }
+    .steps {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      margin: 20px 0;
+      text-align: left;
+    }
+    .steps h3 {
+      color: #00ff88;
+      margin-bottom: 15px;
+    }
+    .steps ol {
+      padding-left: 20px;
+    }
+    .steps li {
+      margin-bottom: 10px;
     }
     a {
       background: #00ff88;
@@ -36,15 +53,41 @@
       font-size: 1.1em;
       font-weight: bold;
       transition: all 0.3s ease;
+      margin: 10px;
+      display: inline-block;
     }
     a:hover {
       background: #00cc6a;
+      transform: translateY(-2px);
+    }
+    .btn-secondary {
+      background: #4ecdc4;
+    }
+    .btn-secondary:hover {
+      background: #44a08d;
     }
   </style>
 </head>
 <body>
-  <h1>Activate Your AI Coach</h1>
-  <p>Your transformation assistant is ready to guide you.</p>
-  <a href="https://triadcoach.com/assistant" target="_blank">Launch AI Coach</a>
+  <h1>🤖 Activate Your AI Coach</h1>
+  <p>Your personal transformation assistant is ready to guide you through your 365-day journey!</p>
+  
+  <div class="steps">
+    <h3>🚀 Quick Setup Steps:</h3>
+    <ol>
+      <li>Open the Google Sheets tracker below</li>
+      <li>Create your OpenAI API key (link provided)</li>
+      <li>Follow the setup instructions in the sheet</li>
+      <li>Start your transformation journey!</li>
+    </ol>
+  </div>
+  
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Launch AI Tracker</a>
+  
+  <a href="https://platform.openai.com/api-keys" target="_blank" class="btn-secondary">🔑 Get API Key</a>
+  
+  <p style="font-size: 0.9em; opacity: 0.8; margin-top: 30px;">
+    Need help? The setup guide is included in your download package.
+  </p>
 </body>
 </html>
