--- a/tracker/index.html
+++ b/tracker/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +25,53 @@
     p {
       font-size: 1.2em;
       margin-bottom: 1.5em;
+      max-width: 600px;
+    }
+    .pillars {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px 0;
+      flex-wrap: wrap;
+    }
+    .pillar {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 15px;
+      border-radius: 15px;
+      min-width: 150px;
+    }
+    .pillar-icon {
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+    .features {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      margin: 20px 0;
+      text-align: left;
+      max-width: 500px;
+    }
+    .features h3 {
+      color: #00ff88;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+    .features ul {
+      list-style: none;
+      padding: 0;
+    }
+    .features li {
+      margin-bottom: 8px;
+      padding-left: 20px;
+      position: relative;
+    }
+    .features li:before {
+      content: "✓";
+      position: absolute;
+      left: 0;
+      color: #00ff88;
+      font-weight: bold;
     }
     a {
       background: #00ff88;
@@ -39,12 +85,47 @@
     }
     a:hover {
       background: #00cc6a;
+      transform: translateY(-2px);
     }
   </style>
 </head>
 <body>
-  <h1>Track Your Progress</h1>
-  <p>Use our dynamic Google Sheets template to stay on course.</p>
-  <a href="https://docs.google.com/spreadsheets/d/your-tracker-id" target="_blank">Open Tracker</a>
+  <h1>📈 Track Your Progress</h1>
+  <p>Monitor your transformation in real-time with our smart tracking system!</p>
+  
+  <div class="pillars">
+    <div class="pillar">
+      <div class="pillar-icon">🎯</div>
+      <h4>Quantum Vision</h4>
+      <p>Goal Clarity</p>
+    </div>
+    <div class="pillar">
+      <div class="pillar-icon">⚖️</div>
+      <h4>Balance Matrix</h4>
+      <p>Energy & Priorities</p>
+    </div>
+    <div class="pillar">
+      <div class="pillar-icon">🔄</div>
+      <h4>Micro-Revolution</h4>
+      <p>Daily Habits</p>
+    </div>
+  </div>
+  
+  <div class="features">
+    <h3>🔥 What You'll Track:</h3>
+    <ul>
+      <li>Daily ratings of the three pillars</li>
+      <li>AI analysis of your progress</li>
+      <li>Personalized recommendations</li>
+      <li>Weekly and monthly reports</li>
+      <li>Automatic data backup</li>
+    </ul>
+  </div>
+  
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Open Tracker</a>
+  
+  <p style="font-size: 0.9em; opacity: 0.8; margin-top: 30px;">
+    Start tracking today and see the power of measurement in transformation!
+  </p>
 </body>
 </html>
