--- a/community/index.html
+++ b/community/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Track Your Progress</title>
+  <title>Join the Transformation Community</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -13,7 +13,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
       text-align: center;
       padding: 20px;
@@ -27,24 +27,7 @@
       margin-bottom: 1.5em;
       max-width: 600px;
     }
-    .pillars {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin: 30px 0;
-      flex-wrap: wrap;
-    }
-    .pillar {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 15px;
-      border-radius: 15px;
-      min-width: 150px;
-    }
-    .pillar-icon {
-      font-size: 40px;
-      margin-bottom: 10px;
-    }
-    .features {
+    .community-vision {
       background: rgba(255, 255, 255, 0.1);
       padding: 20px;
       border-radius: 15px;
@@ -52,26 +35,46 @@
       text-align: left;
       max-width: 500px;
     }
-    .features h3 {
+    .community-vision h3 {
       color: #00ff88;
       margin-bottom: 15px;
       text-align: center;
     }
-    .features ul {
+    .community-vision ul {
       list-style: none;
       padding: 0;
     }
-    .features li {
-      margin-bottom: 8px;
-      padding-left: 20px;
+    .community-vision li {
+      margin-bottom: 10px;
+      padding-left: 25px;
       position: relative;
     }
-    .features li:before {
-      content: "✓";
+    .community-vision li:before {
+      content: "🌟";
       position: absolute;
       left: 0;
+    }
+    .coming-soon {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      margin: 20px 0;
+      max-width: 500px;
+    }
+    .coming-soon h3 {
       color: #00ff88;
-      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .contact-section {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 20px;
+      border-radius: 15px;
+      margin: 20px 0;
+      max-width: 500px;
+    }
+    .contact-section h3 {
+      color: #00ff88;
+      margin-bottom: 10px;
     }
     a {
       background: #00ff88;
@@ -82,50 +85,57 @@
       font-size: 1.1em;
       font-weight: bold;
       transition: all 0.3s ease;
+      margin: 10px;
+      display: inline-block;
     }
     a:hover {
       background: #00cc6a;
       transform: translateY(-2px);
     }
+    .btn-secondary {
+      background: #4ecdc4;
+    }
+    .btn-secondary:hover {
+      background: #44a08d;
+    }
   </style>
 </head>
 <body>
-  <h1>📈 Track Your Progress</h1>
-  <p>Monitor your transformation in real-time with our smart tracking system!</p>
+  <h1>👥 Join the Transformation Community</h1>
+  <p>Connect with others on the same transformation journey and support each other's growth!</p>
   
-  <div class="pillars">
-    <div class="pillar">
-      <div class="pillar-icon">🎯</div>
-      <h4>Quantum Vision</h4>
-      <p>Goal Clarity</p>
-    </div>
-    <div class="pillar">
-      <div class="pillar-icon">⚖️</div>
-      <h4>Balance Matrix</h4>
-      <p>Energy & Priorities</p>
-    </div>
-    <div class="pillar">
-      <div class="pillar-icon">🔄</div>
-      <h4>Micro-Revolution</h4>
-      <p>Daily Habits</p>
-    </div>
-  </div>
-  
-  <div class="features">
-    <h3>🔥 What You'll Track:</h3>
+  <div class="community-vision">
+    <h3>🚀 Our Community Vision:</h3>
     <ul>
-      <li>Daily ratings of the three pillars</li>
-      <li>AI analysis of your progress</li>
-      <li>Personalized recommendations</li>
-      <li>Weekly and monthly reports</li>
-      <li>Automatic data backup</li>
+      <li>Daily motivation and support</li>
+      <li>Sharing successes and challenges</li>
+      <li>Group challenges and accountability</li>
+      <li>Expert tips and Q&A sessions</li>
+      <li>Transformation stories and inspiration</li>
+      <li>Exclusive content and resources</li>
     </ul>
   </div>
   
-  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Open Tracker</a>
+  <div class="coming-soon">
+    <h3>🔨 Coming Soon!</h3>
+    <p>We're building an amazing community platform where you can connect with fellow transformation enthusiasts. The community will launch once we have our first 100 members!</p>
+  </div>
+  
+  <div class="contact-section">
+    <h3>📧 Want to Connect Now?</h3>
+    <p>Email us your transformation story, questions, or suggestions. We love hearing from our community and will personally respond!</p>
+  </div>
+  
+  <a href="mailto:leo84@abv.bg?subject=Community Interest - The Triad of Change&body=Hi! I'm interested in joining the transformation community. Here's my story so far..." target="_blank">
+    💬 Contact Us
+  </a>
+  
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank" class="btn-secondary">
+    📊 Start Your Journey
+  </a>
   
   <p style="font-size: 0.9em; opacity: 0.8; margin-top: 30px;">
-    Start tracking today and see the power of measurement in transformation!
+    Transformation is easier when you're not alone. We're building something special together!
   </p>
 </body>
 </html>
