--- a/ai-setup/index.html
+++ b/ai-setup/index.html
@@ -27,23 +27,6 @@
       margin-bottom: 1.5em;
       max-width: 600px;
     }
-    .steps {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 15px;
-      margin: 20px 0;
-      text-align: left;
-    }
-    .steps h3 {
-      color: #00ff88;
-      margin-bottom: 15px;
-    }
-    .steps ol {
-      padding-left: 20px;
-    }
-    .steps li {
-      margin-bottom: 10px;
-    }
     a {
       background: #00ff88;
       color: #1e3c72;
@@ -58,36 +41,22 @@
     }
     a:hover {
       background: #00cc6a;
-      transform: translateY(-2px);
-    }
-    .btn-secondary {
-      background: #4ecdc4;
-    }
-    .btn-secondary:hover {
-      background: #44a08d;
     }
   </style>
 </head>
 <body>
   <h1>🤖 Activate Your AI Coach</h1>
-  <p>Your personal transformation assistant is ready to guide you through your 365-day journey!</p>
+  <p>Your personal transformation assistant is ready to guide you!</p>
+  <p>Follow these simple steps:</p>
+  <p>1. Open the tracker below<br>
+     2. Get your OpenAI API key<br>
+     3. Follow setup instructions<br>
+     4. Start transforming!</p>
   
-  <div class="steps">
-    <h3>🚀 Quick Setup Steps:</h3>
-    <ol>
-      <li>Open the Google Sheets tracker below</li>
-      <li>Create your OpenAI API key (link provided)</li>
-      <li>Follow the setup instructions in the sheet</li>
-      <li>Start your transformation journey!</li>
-    </ol>
-  </div>
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Open AI Tracker</a>
   
-  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Launch AI Tracker</a>
+  <a href="https://platform.openai.com/api-keys" target="_blank">🔑 Get API Key</a>
   
-  <a href="https://platform.openai.com/api-keys" target="_blank" class="btn-secondary">🔑 Get API Key</a>
-  
-  <p style="font-size: 0.9em; opacity: 0.8; margin-top: 30px;">
-    Need help? The setup guide is included in your download package.
-  </p>
+  <p style="font-size: 0.9em; margin-top: 30px;">Need help? Check the setup guide in your package.</p>
 </body>
 </html>
