--- a/community/index.html
+++ b/community/index.html
@@ -13,7 +13,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 100vh;
+      height: 100vh;
       margin: 0;
       text-align: center;
       padding: 20px;
@@ -26,55 +26,6 @@
       font-size: 1.2em;
       margin-bottom: 1.5em;
       max-width: 600px;
-    }
-    .community-vision {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 15px;
-      margin: 20px 0;
-      text-align: left;
-      max-width: 500px;
-    }
-    .community-vision h3 {
-      color: #00ff88;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-    .community-vision ul {
-      list-style: none;
-      padding: 0;
-    }
-    .community-vision li {
-      margin-bottom: 10px;
-      padding-left: 25px;
-      position: relative;
-    }
-    .community-vision li:before {
-      content: "🌟";
-      position: absolute;
-      left: 0;
-    }
-    .coming-soon {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 15px;
-      margin: 20px 0;
-      max-width: 500px;
-    }
-    .coming-soon h3 {
-      color: #00ff88;
-      margin-bottom: 10px;
-    }
-    .contact-section {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 15px;
-      margin: 20px 0;
-      max-width: 500px;
-    }
-    .contact-section h3 {
-      color: #00ff88;
-      margin-bottom: 10px;
     }
     a {
       background: #00ff88;
@@ -90,52 +41,38 @@
     }
     a:hover {
       background: #00cc6a;
-      transform: translateY(-2px);
     }
-    .btn-secondary {
-      background: #4ecdc4;
+    .vision-list {
+      text-align: left;
+      margin: 20px 0;
+      max-width: 500px;
     }
-    .btn-secondary:hover {
-      background: #44a08d;
+    .vision-list h3 {
+      color: #00ff88;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <h1>👥 Join the Transformation Community</h1>
-  <p>Connect with others on the same transformation journey and support each other's growth!</p>
+  <p>Connect with others on the same transformation journey!</p>
   
-  <div class="community-vision">
-    <h3>🚀 Our Community Vision:</h3>
-    <ul>
-      <li>Daily motivation and support</li>
-      <li>Sharing successes and challenges</li>
-      <li>Group challenges and accountability</li>
-      <li>Expert tips and Q&A sessions</li>
-      <li>Transformation stories and inspiration</li>
-      <li>Exclusive content and resources</li>
-    </ul>
+  <div class="vision-list">
+    <h3>🚀 Community Vision:</h3>
+    <p>🌟 Daily motivation and support<br>
+       🌟 Sharing successes and challenges<br>
+       🌟 Group challenges and accountability<br>
+       🌟 Expert tips and Q&A sessions<br>
+       🌟 Transformation stories and inspiration</p>
   </div>
   
-  <div class="coming-soon">
-    <h3>🔨 Coming Soon!</h3>
-    <p>We're building an amazing community platform where you can connect with fellow transformation enthusiasts. The community will launch once we have our first 100 members!</p>
-  </div>
+  <p><strong>🔨 Coming Soon!</strong><br>
+     We're building an amazing community platform.</p>
   
-  <div class="contact-section">
-    <h3>📧 Want to Connect Now?</h3>
-    <p>Email us your transformation story, questions, or suggestions. We love hearing from our community and will personally respond!</p>
-  </div>
+  <a href="mailto:leo84@abv.bg?subject=Community Interest&body=Hi! I'm interested in joining the transformation community." target="_blank">💬 Contact Us</a>
   
-  <a href="mailto:leo84@abv.bg?subject=Community Interest - The Triad of Change&body=Hi! I'm interested in joining the transformation community. Here's my story so far..." target="_blank">
-    💬 Contact Us
-  </a>
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank">📊 Start Journey</a>
   
-  <a href="https://docs.google.com/spreadsheets/d/1ae0qGlCQ9FsqQflxs0Y5T-ktWvZTXJDgq0qTD20sr4HEq/edit?gid=0#gid=0" target="_blank" class="btn-secondary">
-    📊 Start Your Journey
-  </a>
-  
-  <p style="font-size: 0.9em; opacity: 0.8; margin-top: 30px;">
-    Transformation is easier when you're not alone. We're building something special together!
-  </p>
+  <p style="font-size: 0.9em; margin-top: 30px;">Transformation is easier when you're not alone!</p>
 </body>
 </html>
