--- a/ai-setup/index.html
+++ b/ai-setup/index.html
@@ -53,8 +53,7 @@
      3. Follow setup instructions<br>
      4. Start transforming!</p>
   
-  <a href="href="https://docs.google.com/spreadsheets/d/1ae0qGIQ9FSq0fixs0Y5T-ktWvZTXJDq0qTD20sr4HEg/edit?gid=0#gid=0"
-" target="_blank">📊 Open AI Tracker</a>
+  <a href="https://docs.google.com/spreadsheets/d/1ae0qGIQ9FSq0fixs0Y5T-ktWvZTXJDq0qTD20sr4HEg/edit?gid=0#gid=0" target="_blank">📊 Open AI Tracker</a>
   
   <a href="https://platform.openai.com/api-keys" target="_blank">🔑 Get API Key</a>
   
