--- a/ai-setup/index.html
+++ b/ai-setup/index.html
@@ -300,7 +300,7 @@
     <div class="hero">
       <h1>🚀 Activate Your Personal AI Coach</h1>
       <p>Start your 365-day transformation journey today with the Triad Tracker and your own AI Assistant.</p>
-      <a href="https://docs.google.com/spreadsheets/d/1ae0qGIQ9FSq0fixs0Y5T-ktWvZTXJDq0qTD20sr4HEg/copy" 
+      <a href="https://docs.google.com/spreadsheets/d/1ae0qGIQ9FSq0fixs0Y5T-ktWvZTXJDq0qTD20sr4HEg/copy?hl=en" 
          class="btn-primary" 
          target="_blank">
          ✅ Get My Tracker Now
