--- a/resources/index.html
+++ b/resources/index.html
@@ -351,22 +351,19 @@
       </div>
     </div>
 
-    <!-- Bonus Materials Module -->
-    <div class="module bonus">
-      <h2>🎁 Bonus Materials <span class="status coming-soon">COMING SOON</span></h2>
-      <p>Motivation packs, advanced templates, transformation rituals, and exclusive content to accelerate your progress.</p>
-      <div class="module-buttons">
-        <a href="#" 
-           class="btn btn-tertiary" 
-           onclick="alert('Coming soon! We are preparing something special for you.')">
-           📦 Access Bonuses
-        </a>
-        <a href="mailto:leo84@abv.bg?subject=Bonus Materials Request" 
-           class="btn btn-secondary">
-           📧 Get Notified
-        </a>
-      </div>
-    </div>
+   <!-- Suggest Feature Module -->
+<div class="module bonus">
+  <h2>💡 Suggest a Feature <span class="status live">ACTIVE</span></h2>
+  <p>Have an idea to improve the Triad system? Let us know what tools or features you'd love to see next.</p>
+  <div class="module-buttons">
+    <a href="https://forms.gle/AHBzKYr2zESi3Sxb9" 
+       class="btn btn-tertiary" 
+       target="_blank">
+       💬 Submit Suggestion
+    </a>
+  </div>
+</div>
+
 
     <!-- Updates Module -->
     <div class="module updates">
