--- a/resources/index.html
+++ b/resources/index.html
@@ -376,7 +376,7 @@
     <div class="footer">
       <h3>💬 Need Help or Support?</h3>
       <p>Questions about setup? Want to share your success story? Technical issues?</p>
-      <p>Contact me directly: <a href="mailto:leo84@abv.bg">leo84@abv.bg</a></p>
+      <p>Contact me directly: <a href="mailto:hello@triadcoach.com">hello@triadcoach.com</a></p>
       <p style="margin-top: 20px;"><a href="https://triadcoach.com/">← Back to Home</a></p>
     </div>
   </div>
