--- a/ai-setup/index.html
+++ b/ai-setup/index.html
@@ -355,7 +355,7 @@
 
     <!-- Footer -->
     <div class="footer">
-      <p>Need help? Contact: <a href="mailto:leo84@abv.bg">leo84@abv.bg</a> | 
+      <p>Need help? Contact: <a href="mailto:hello@triadcoach.com">hello@triadcoach.com</a> | 
          <a href="https://triadcoach.com/">← Back to Home</a></p>
     </div>
   </div>
