--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <p>You're not just getting a book. You're unlocking a complete system to transform your life with the power of AI. Download your toolkit below and begin the journey of true change.</p>
     <a class="cta-button" href="https://your-download-link.com/triad-coach.zip" target="_blank">Download Full System</a>
 
-    <p class="small">Need help? Contact: leo84@abv.bg</p>
+    <p class="small">Need help? Contact: hello@triadcoach.com</p>
 </section>
 
 </body>
